Clear the SonarCloud findings on the report module
The branch failed the quality gate on new_reliability_rating because of one
bug, java:S5841 in ReportServiceTest. The code smells SonarCloud raised on
the report module's own files are cleared with it: nineteen findings in all.
In the tests only the way an assertion is written changes; every assertion
still checks what it checked before.

S5841 (bug), ReportServiceTest: allSatisfy on an empty list passes, so a
generate() that filed nothing would have read as a week filed complete. The
list is now asserted non-empty before every element is checked.

S5778, ReportServiceTest, ReportContentBuilderTest, ReportFactsTest,
ReportPeriodTest, ReportTest and ReportRepositoryAdapterTest (ten places):
the lambda handed to assertThatThrownBy made more than one call that could
throw, so the expected exception could have come from building an argument
rather than from the call under test. The arguments are built before the
lambda; where only a single call was left, the lambda is a method reference.

S5853, ReportControllerTest and ReportAssemblerTest (three places):
consecutive assertions on the same value are now one chain.

S1117, ReportAssemblerTest (two places): locals named facts hid the class's
shared fixture of the same name; they are renamed for what they hold.

S6885, ReportService: the page size is bounded with Math.clamp instead of
Math.min around Math.max. The bounds, 1 and 200, are unchanged.

S3358, ReportContentJson: the empty-body default for a stored section moves
into StoredSection.toDomain(), so no ternary sits inside another.

S1186, ReportJpaEntity and ReportAmendmentJpaEntity: the empty no-argument
constructors now say why they are empty; JPA needs them to instantiate the
entity before setting its columns.

SonarCloud reports similar findings on CaregiverReviewJpaEntity,
ValueAddedServiceJpaEntity, ValueAddedServiceRequestJpaEntity and their
mapper tests. Those are the FM08 and FM09 scaffolding, not this modu